297
Fixed in r17054.  Output from test script is now:
```scala
$$ ./test.scala 
(fragment of test.scala):6: error: '}' expected but eof found.
for (i <- 0 to 2) {
                   ^
one error found
!!!
discarding <script preamble>
```
